# interactive-xdg-mime-settings

./: Cargo.toml  LICENSE  README.md
src/: main.rs
